added the page timer.html to the public folder

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>A great change</h2>
+    <h2>A timer until the new year 2025, including a daily progress bar</h2>
 </body>
 </html>
